@@ -568,7 +568,7 @@ static SyscallTableEntry syscall_table[] = {
    LINX_(__NR_delete_module,  sys_delete_module),                     // 129
 
    GENX_(130, sys_ni_syscall), /* unimplemented (by the kernel) */    // 130
-   LINX_(__NR_quotactl, sys_quotactl),                                // 131
+   LINXY(__NR_quotactl, sys_quotactl),                                // 131
    GENX_(__NR_getpgid,  sys_getpgid),                                 // 132
    GENX_(__NR_fchdir,  sys_fchdir),                                   // 133
 // ?????(__NR_bdflush, ),                                             // 134
@@ -887,7 +887,7 @@ static SyscallTableEntry syscall_table[] = {
 
    LINXY(__NR_epoll_pwait2, sys_epoll_pwait2),                        // 441
    LINX_(__NR_mount_setattr, sys_mount_setattr),                      // 442
-   LINX_(__NR_quotactl_fd, sys_quotactl_fd),                          // 443
+   LINXY(__NR_quotactl_fd, sys_quotactl_fd),                          // 443
 
    LINXY(__NR_landlock_create_ruleset, sys_landlock_create_ruleset),  // 444
    LINX_(__NR_landlock_add_rule,       sys_landlock_add_rule),        // 445
